# clog

./: .gitignore  CMakeLists.txt  README.md
include/clog/: clog.h
src/: clog.cpp  example.cpp
